# SNK-RAT

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md
.github/: FUNDING.yml
nim_stealth/: NIM_STEALTH_ANALYSIS.md  libstealth.nim
nim_stealth/core/: blinder.nim  masking.nim  resolver.nim  stealth_macros.nim  syscalls.nim  utils.nim
nim_stealth/injection/: ghosting.nim  herpaderping.nim  hollowing.nim  mapper.nim  phantom_fiber.nim  poolparty.nim  stomping.nim  threadless.nim
nim_stealth/kct/: kct_core.nim  kct_core_fiber.nim  phantom_fiber_v4.nim
nim_stealth/tests/: build_test.ps1  test_all.nim  test_custom_process.nim  test_svchost.nim
screen-share-worker/: SETUP.md  package.json  wrangler.toml
screen-share-worker/src/: index.js
snaky_rust_win/: Cargo.toml  build.rs  encrypt_stealth.py  stego_strings.json
snaky_rust_win/.cargo/: config.toml
snaky_rust_win/src/: command_registry.rs  config.rs  main.rs  prelude.rs  settings.rs  stealth.rs  system_info.rs
snaky_rust_win/src/commands/: mod.rs
snaky_rust_win/src/commands/core/: auth.rs  exit.rs  help.rs  info.rs  kctshell.rs  mod.rs  ping.rs  shell.rs  uninstall.rs
snaky_rust_win/src/commands/crypto/: mod.rs
snaky_rust_win/src/commands/filesystem/: cat.rs  cd.rs  checkdrive.rs  clear.rs  download.rs  fileinfo.rs  get.rs  ls.rs  mkdir.rs  mod.rs  remove.rs  rename.rs  size.rs  unzip.rs  upload.rs  zip.rs
snaky_rust_win/src/commands/network/: ipconfig.rs  mod.rs  nslookup.rs
snaky_rust_win/src/commands/system/: allupdate.rs  bsod.rs  crashps.rs  mod.rs  monitor.rs  process.rs  record.rs  refresh.rs  screen.rs  screen_share.rs  stealer.rs  update.rs  visible.rs  volume.rs  windowops.rs
snaky_rust_win/src/commands/utility/: audio.rs  clipboard.rs  clipper.rs  foreground.rs  jumpscare.rs  mod.rs  openurl.rs  print.rs  screenshot.rs  webcam.rs
snaky_rust_win/src/core/: assets.rs  auth.rs  decoy.rs  defender.rs  device_id.rs  http_client.rs  instance.rs  keep_active.rs  mod.rs  obfuscator.rs  process.rs  screenshot.rs  security.rs  startup.rs  stego_store.rs  wifi_monitor.rs
snaky_rust_win/src/core/discord/: channel.rs
snaky_rust_win/src/utils/: file_ops.rs  formatting.rs  mod.rs  window_ops.rs
worker/: SETUP.md  package-lock.json  package.json  wrangler.toml
worker/src/: index.js
